--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$versions.rx_java"
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
+    implementation "com.jakewharton.rxbinding3:rxbinding:$versions.rx_binding"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
 
