--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation "com.google.code.gson:gson:$versions.gson"
     implementation "io.coil-kt:coil:2.1.0"
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.1'
+
 
     implementation "io.reactivex.rxjava2:rxjava:$versions.rx_java"
     implementation "io.reactivex.rxjava2:rxkotlin:$versions.rx_kotlin"
