Добавлен splash screen, добавлены слушатели интернета на все фрагменты, изменен ключ апи, добавлены фоны дождя

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         debug {
             buildConfigField "String", "BASE_WEATHER_URL", "\"https://devapi.qweather.com/v7/\""
             buildConfigField "String", "BASE_GEO_URL", "\"https://geoapi.qweather.com/v2/\""
-            buildConfigField "String", "API_KEY", "\"f714954b26794670b66643a8ff2c7d11\""
+            buildConfigField "String", "API_KEY", "\"03db95dcc2d94d5385ad3fd941177a1a\""
         }
     }
     compileOptions {
@@ -55,13 +55,16 @@ ext {
             rx_binding      : "3.1.0",
             okhttp          : "4.9.0",
             navComponent    : "1.0.0-alpha05",
-            room            : "2.2.6"
+            room            : "2.2.6",
+            lottieVersion   : "3.4.0"
     ]
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
+
+    implementation "com.airbnb.android:lottie:$versions.lottieVersion"
 
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
