--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:icon="@mipmap/ic_sunny_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_sunny_launcher_round"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/Theme.WeatherApp"
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="locked"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,8 +29,8 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.WeatherApp"
             android:screenOrientation="locked">
-
         </activity>
     </application>
 
