--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.weatherapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +13,8 @@
         android:icon="@mipmap/ic_sunny_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_sunny_launcher_round"
-        android:theme="@style/Theme.WeatherApp"
         android:supportsRtl="true"
+        android:theme="@style/Theme.WeatherApp"
         tools:targetApi="31">
         <activity
             android:name=".SplashScreenActivity"
@@ -29,8 +29,10 @@
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.WeatherApp"
-            android:screenOrientation="locked">
+            android:exported="true"
+            android:screenOrientation="locked"
+            android:theme="@style/Theme.WeatherApp">
+            <nav-graph android:value="@navigation/nav_graph" />
         </activity>
     </application>
 
