--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.4.20"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.7.0"
     }
 }
 plugins {
